[package]
name = "refactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
crossterm = "0.25.0"
eyre = "0.6.8"
fs-err = "2.8.1"
ignore = "0.4.18"
path-clean = "0.1.0"
pathdiff = "0.2.1"
pretty_assertions = "1.3.0"
similar = "2.2.0"
